styles added to look better

--- a/Exercise6.html
+++ b/Exercise6.html
@@ -5,16 +5,16 @@
     <title>
         Oppenheimer
     </title>
-    <link rel="stylesheet" href="Exercise6.css">
+    <link rel="stylesheet" href="Exercise7.css">
 </head>
 <body>
     <header>
         <img src="openheimer.jpg" alt="Openheimer movie image">
     </header>
     <h1>Oppenheimer</h1>
-    <p>Premiere: July 21, 2023</p>
-    <p>Director: Christopher Nolan</p>
-    <p>Movie cast: Cillian Murphy, Emily Blunt, Matt Damon, Robert Downey,
+    <p><b>Premiere:</b> July 21, 2023</p>
+    <p><b>Director:</b> Christopher Nolan</p>
+    <p><b>Movie cast:</b> Cillian Murphy, Emily Blunt, Matt Damon, Robert Downey,
         Florence Pugh, Josh Hartnett, Casey Affleck, Rami Malek.
     </p>
     <h3>Movie Description:</h3>
@@ -25,10 +25,10 @@
         first successful test of a nuclear bomb. 
     </p>
     <p>The film was well-received by critics and has a rating of 88 out of 100 on Metacritic.</p>
-    <div class="video-container">
-        <iframe width="420" height="345"
+    
+        <iframe width="500" height="400"
         src="https://www.youtube.com/embed/bK6ldnjE3Y0?si=8VYpw7JLgTfk9iOQ"> </iframe>
-    </div>
+    
     <a href="https://en.wikipedia.org/wiki/Oppenheimer_(film)">More details about Oppenheimer</a>
     <footer>
         <p>Created by Sushma Srinivasan for Filmbolaget FS</p>
